--- a/style.css
+++ b/style.css
@@ -13,3 +13,71 @@
     box-sizing: border-box;
     position: relative;
 }
+.navbar{
+    width: 100%;
+    height: 15vh;
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+.logo{
+    width: 160px;
+    cursor: pointer;
+}
+.cart{
+    width: 40px;
+    cursor: pointer;
+}
+nav{
+    flex: 1;
+    padding-left: 60px;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin : 0px 20px ;
+}
+nav ul li a {
+    text-decoration:none;
+    color: #333;
+}
+.content h1{
+    font-size: 60px;
+    font-weight: 100;
+    margin-top: 24px;
+    margin-bottom: 15px;
+    color: #232d60;
+}
+.content p{
+    font-size: 20px;
+    
+    color: #6a7199;
+}
+.content{
+    margin-left:10px ;
+    margin-top: 10px;
+}
+.content .btn{
+    display: inline-block;
+    background: linear-gradient(45deg, #87adfe, #ff77cd );
+    border-radius: 6px;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    text-decoration: none;
+    box-shadow: 3px 8px 22px rgba(94, 24, 68, 0.15a);
+}
+.arrow-item{
+    margin-top: 40px;
+    display: flex;
+}
+.arrow-item img{
+    width: 40px;
+    margin-right: 25px;
+}
+.feature-img{
+    height: 90%;
+    position: absolute;
+    bottom: 0;
+    right: 160px;
+
+}
